--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
 	margin: 15px;
 }
 
+body{
+	background-color: #121212 !important;
+	color: white;
+}
+
 #blocbtnvalid {
 	margin-top: 5px;
 	text-align: right;
